# sureal-tauri-sidecar

./: .gitignore  README.md  package-lock.json  package.json
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
