[package]
name = "surreal-sidecar"
version = "0.1.0"
description = "Use Surrealdb as a sidecar application in Tauri"
authors = ["Roman Geber"]
license = "MIT"
repository = "https://code.geber.io/romangeber/sureal-tauri-sidecar"
edition = "2021"

[profile.dev]
# This is important to ensure full app panic in case surrealdb doesn't start properly or goes
# away in some other fashion. Not ideal for smooth production use but works for this example.
panic = 'abort'

[profile.release]
panic = 'abort'

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tauri = { version = "1.5", features = [ "shell-open", "process-command-api" ] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
